--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "gulp-uglify": "^1.1.0",
     "node-uuid": "^1.4.2",
-    "react": "^0.12.2"
+    "react": "^0.12.2",
+    "vinyl-buffer": "^1.0.0"
   }
 }
