--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Basic shopping list implemented with React.js.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-for-development": "ulimit -S -n 2048 && gulp build-development",
+    "build-for-production": "ulimit -S -n 2048 && gulp build-production"
   },
   "repository": {
     "type": "git",
@@ -24,9 +26,12 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "flux": "^2.1.1",
     "gulp-uglify": "^1.1.0",
     "node-uuid": "^1.4.2",
-    "react": "^0.12.2",
+    "object-assign": "^4.0.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "vinyl-buffer": "^1.0.0"
   }
 }
