--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
     "gulp-html-minifier": "^0.1.6",
+    "gulp-uglify": "^1.1.0",
     "reactify": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "vinyl-buffer": "^1.0.0"
   },
   "dependencies": {
     "flux": "^2.1.1",
-    "gulp-uglify": "^1.1.0",
     "node-uuid": "^1.4.2",
     "object-assign": "^4.0.1",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "vinyl-buffer": "^1.0.0"
+    "react-dom": "^0.14.3"
   }
 }
