--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
   },
   "homepage": "https://github.com/fedosejev/shopping-list-react",
   "devDependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
     "gulp-html-minifier": "^0.1.6",
     "gulp-uglify": "^1.1.0",
-    "reactify": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "vinyl-buffer": "^1.0.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
     "flux": "^2.1.1",
     "node-uuid": "^1.4.2",
     "object-assign": "^4.0.1",
-    "react": "^0.15.0",
-    "react-dom": "^0.15.0"
+    "react": "^15.0",
+    "react-dom": "^15.0"
   }
 }
